Added new JUnit tests to production and they are failing.

--- a/build.xml
+++ b/build.xml
@@ -355,7 +355,10 @@
           <test name="opendap.coreServlet.Scrub" />
           <test name="opendap.aggregation.AggregationParamsTest" />
 
-          <test name="opendap.bes.dap4Responders.Dap4ResponderTest" />
+            <test name="opendap.bes.dap4Responders.Dap4ResponderTest" />
+
+            <test name="opendap.dap4.DatasetTest" />
+            <test name="opendap.wcs.v2_0.DynamicCoverageDescriptionTest" />
 
         </junit>
     </target>
