--- a/resources/hyrax/WEB-INF/web.xml
+++ b/resources/hyrax/WEB-INF/web.xml
@@ -148,10 +148,18 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>IdFilter</filter-name>
+        <filter-class>opendap.auth.IdFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>IdFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
-<!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-    Catalog Response Cache Updater (worker thread)
--->
+    <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+        Catalog Response Cache Updater (worker thread)
+    -->
     <listener>
         <listener-class>opendap.bes.caching.CatalogCacheUpdater</listener-class>
     </listener>
