--- a/build.xml
+++ b/build.xml
@@ -392,7 +392,7 @@
                 <exclude name="opendap/experiments/**"/>
 
                 <!-- Exclude the auth code  -->
-                <exclude name="opendap/auth/**"/>
+                <!-- exclude name="opendap/auth/**"/ -->
 
                 <!-- Exclude the Metacat code  -->
                 <exclude name="opendap/metacat/**"/>
