Ticket 581. My OLFS version for test.

--- a/build.xml
+++ b/build.xml
@@ -580,14 +580,14 @@
              compression="gzip"
                 >
             <zipfileset dir="${build.dist}" prefix="${WEBAPP_DIST}">
-                <include name="opendap.war"/>
+                <include name="olfs.war"/>
                 <include name="README"/>
             </zipfileset>
 
         </tar>
 
         <delete file="${build.dist}/README"/>
-        <delete file="${build.dist}/opendap.war"/>
+        <delete file="${build.dist}/olfs.war"/>
 
     </target>
 
@@ -839,7 +839,7 @@
 
         <mkdir dir="${build.osx}${CATALINA_HOME}/webapps"/>
         
-        <copy file="${build.dist}/opendap.war" tofile="${build.osx}${CATALINA_HOME}/webapps/opendap.war"/>
+        <copy file="${build.dist}/olfs.war" tofile="${build.osx}${CATALINA_HOME}/webapps/olfs.war"/>
 
         <copy todir="${build.dir}/osx-resources" filtering="true">
           <fileset dir="${osx.resources}" />
