--- a/resources/hyrax/WEB-INF/web.xml
+++ b/resources/hyrax/WEB-INF/web.xml
@@ -148,6 +148,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <!-- Uncomment this bit to turn on access control.
     <filter>
         <filter-name>IdP</filter-name>
         <filter-class>opendap.auth.IdFilter</filter-class>
@@ -167,13 +168,17 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    -->
+
 
     <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
         Catalog Response Cache Updater (worker thread)
     -->
+    <!-- Currently disabled...
     <listener>
         <listener-class>opendap.bes.caching.CatalogCacheUpdater</listener-class>
     </listener>
+    -->
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
     <servlet>
