--- a/resources/hyrax/WEB-INF/web.xml
+++ b/resources/hyrax/WEB-INF/web.xml
@@ -148,7 +148,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <!-- Uncomment These two filters to enable access control.
+    <!-- Uncomment These two filters to enable access control. -->
     <filter>
         <filter-name>IdP</filter-name>
         <filter-class>opendap.auth.IdFilter</filter-class>
@@ -168,7 +168,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    -->
+    <!-- -->
 
 
     <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
