Reorganized request dispatch and created HyraxService class.

--- a/build.xml
+++ b/build.xml
@@ -379,6 +379,8 @@
                 <include name="org/opendap/**"/>
 
 
+                <exclude name="opendap/cmr/**"/>
+
                 <!-- Exclude the experimental code  -->
                 <exclude name="opendap/experiments/**"/>
 
