olfs: robots.txt service and site maps are working.

--- a/resources/hyrax/WEB-INF/web.xml
+++ b/resources/hyrax/WEB-INF/web.xml
@@ -259,7 +259,7 @@
 
     <servlet>
         <servlet-name>site_map_service</servlet-name>
-        <servlet-class>opendap.bes.BESSiteMap</servlet-class>
+        <servlet-class>opendap.bes.BESSiteMapService</servlet-class>
         <!--servlet-class>org.apache.catalina.servlets.DefaultServlet</servlet-class -->
         <load-on-startup>1</load-on-startup>
     </servlet>
